# tsnn

./: CMakeLists.txt  README.md  precompile_modules.cmake
TSNN/: Activations.slang  CoopVec.slang  LinearOps.slang  Losses.slang
TSNN/Encodings/: Compose.slang  FeatureBuffer.slang  Frequency.slang  HashGrid2D.slang  HashGrid3D.slang  OneBlob.slang  SphericalHarmonics.slang
TSNN/Flows/: AffineTransform.slang  Bijection.slang  CircularRQS.slang  CouplingLayer.slang  PiecewiseLinear.slang  PiecewiseQuadratic.slang  Prior.slang  RQS.slang  Rotation.slang
TSNN/Optimizers/: Adam.slang  AdamW.slang  Sanitizer.slang
TSNN/Utils/: MLP.slang  MLPLayout.slang  Math.slang  PCG32.slang  RWBuffer.slang
examples/image_learn/: .gitignore  Infer.cs.slang  MLP.slang  Network.slang  Optimize.cs.slang  Train.cs.slang  benchmark.py  benchmark_tcnn.py  compare.py  image_learn.py  main.py  pyproject.toml  slangdconfig.json  test.py  test.slang
examples/nde/: .gitignore  Infer.cs.slang  Network.slang  Optimize.cs.slang  Train.cs.slang  main.py  pyproject.toml
